# pyside-yolo-deploy

./: .gitignore  .justfile  .pre-commit-config.yaml  README.md  pyproject.toml  requirements.txt  resources.qrc  resources_rc.py  train.py  train_detr.py
app/: core.py
app/config/: __init__.py
app/utils/: predict.py  security.py
app/views/: login.py  main.py  register.py
app/widgets/: login.ui  login_ui.py  main.ui  main_ui.py  register.ui  register_ui.py
assets/qml/: main.qml
data/: init.sql
notebook/: obb.ipynb
scripts/: build.bat  build.debug.bat
tools/: show_dataset.py  test_camera.py  test_qml.py
