[project]
name = "pyside-yolo-ui"
version = "0.1.0"
description = "YOLOv12 GUI for PySide6"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "opencv-python>=4.11.0.86",
    "pyside6>=6.9.0",
    "torch==2.7.0+cu128; sys_platform != 'darwin'",
    "torch==2.7.0+cpu; sys_platform == 'darwin'",
    "torchaudio==2.7.0+cu128; sys_platform != 'darwin'",
    "torchaudio==2.7.0+cpu; sys_platform == 'darwin'",
    "torchvision==0.22.0+cu128; sys_platform != 'darwin'",
    "torchvision==0.22.0+cpu; sys_platform == 'darwin'",
]

[tool.uv.sources]
torch = [
    { index = "pytorch-cpu", marker = "sys_platform == 'darwin'" },
    { index = "pytorch-cu128", marker = "sys_platform != 'darwin'" },
]
torchaudio = [
    { index = "pytorch-cpu", marker = "sys_platform == 'darwin'" },
    { index = "pytorch-cu128", marker = "sys_platform != 'darwin'" },
]
torchvision = [
    { index = "pytorch-cpu", marker = "sys_platform == 'darwin'" },
    { index = "pytorch-cu128", marker = "sys_platform != 'darwin'" },
]
flash-attn = [
    { url = "https://github.com/kingbri1/flash-attention/releases/download/v2.7.4.post1/flash_attn-2.7.4.post1+cu128torch2.7.0cxx11abiFALSE-cp312-cp312-win_amd64.whl", marker = "sys_platform == 'win32'" },
    { url = "https://github.com/kingbri1/flash-attention/releases/download/v2.7.4.post1/flash_attn-2.7.4.post1+cu128torch2.7.0cxx11abiFALSE-cp312-cp312-linux_x86_64.whl", marker = "sys_platform == 'linux'" },
]

[[tool.uv.index]]
name = "pytorch-cu128"
url = "https://download.pytorch.org/whl/cu128"
explicit = true

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[dependency-groups]
dev = [
    "flash-attn==2.7.4.post1; sys_platform != 'darwin'",
    "ipykernel>=6.29.5",
    "nuitka>=2.7.3",
    "onnx>=1.12.0,<1.18.0",
    "onnxruntime>=1.22.0",
    "onnxslim>=0.1.55",
    "pre-commit>=4.2.0",
    "rust-just>=1.40.0",
    "tensorboard>=2.19.0",
    "ultralytics>=8.3.138",
    "wandb>=0.19.11",
]
