[project]
name = "pyside-yolo-ui"
version = "0.1.0"
description = "YOLOv12 GUI for PySide6"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "opencv-python>=4.12.0.88",
    "pyside6>=6.9.1",
    "torch==2.7.0+cu128; sys_platform != 'darwin'",
    "torch==2.7.0+cpu; sys_platform == 'darwin'",
    "torchaudio==2.7.0+cu128; sys_platform != 'darwin'",
    "torchaudio==2.7.0+cpu; sys_platform == 'darwin'",
    "torchvision==0.22.0+cu128; sys_platform != 'darwin'",
    "torchvision==0.22.0+cpu; sys_platform == 'darwin'",
]

[tool.uv.sources]
torch = [
    { index = "pytorch-cpu", marker = "sys_platform == 'darwin'" },
    { index = "pytorch-cu128", marker = "sys_platform != 'darwin'" },
]
torchaudio = [
    { index = "pytorch-cpu", marker = "sys_platform == 'darwin'" },
    { index = "pytorch-cu128", marker = "sys_platform != 'darwin'" },
]
torchvision = [
    { index = "pytorch-cpu", marker = "sys_platform == 'darwin'" },
    { index = "pytorch-cu128", marker = "sys_platform != 'darwin'" },
]
flash-attn = [
    { url = "https://github.com/kingbri1/flash-attention/releases/download/v2.7.4.post1/flash_attn-2.7.4.post1+cu128torch2.7.0cxx11abiFALSE-cp312-cp312-win_amd64.whl", marker = "sys_platform == 'win32'" },
    { url = "https://github.com/kingbri1/flash-attention/releases/download/v2.7.4.post1/flash_attn-2.7.4.post1+cu128torch2.7.0cxx11abiFALSE-cp312-cp312-linux_x86_64.whl", marker = "sys_platform == 'linux'" },
]

[[tool.uv.index]]
name = "pytorch-cu128"
url = "https://download.pytorch.org/whl/cu128"
explicit = true

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[dependency-groups]
dev = [
    "flash-attn==2.7.4.post1; sys_platform != 'darwin'",
    "jupyter>=1.1.1",
    "nuitka>=2.7.12",
    "onnx>=1.18.0",
    "onnxruntime>=1.22.1",
    "onnxslim>=0.1.62",
    "pre-commit>=4.2.0",
    "rust-just>=1.42.4",
    "tensorboard>=2.20.0",
    "ultralytics>=8.3.174",
    "wandb>=0.21.0",
]
